# rust-systems

./: Cargo.toml  README.md
src/test/: conditionals_and_loops.rs  conditionals_and_loops.rs~  data_types.rs  functions.rs  primitive_types.rs  vectors.rs
test/: hello_world  hello_world.rs
