[package]

name = "rust-systems"
version = "0.0.1"
authors = ["Juspreet S. Sandhu <jssandh2@illinois.edu>"] 

[[bin]]
name = "hello_world"
path = "src/test/hello_world.rs"

[[bin]]
name = "data_types"
path = "src/test/data_types.rs"

[[bin]]
name = "functions"
path = "src/test/functions.rs"

[[bin]]
name = "primitive_types"
path = "src/test/primitive_types.rs"

[[bin]]
name = "conditionals_and_loops"
path = "src/test/conditionals_and_loops.rs"

[[bin]]
name = "vectors"
path = "src/test/vectors.rs"
